5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4500/executions/1679_1099.log
== TEST (2019-04-29 17:14:27) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z = 0):
	print("Entradas: ", x",",y,",",z)
	print("Tipo de triangulo: ","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x! = y) and (x! = z) and (y!= z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- ERROR:
File "XXXX", line 6
    if (x <= 0 or y <= 0 or z = 0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:14:30) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z = 0):
	print("Entradas: ", x",",y,",",z)
	print("Tipo de triangulo: ","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x! = y) and (x! = z) and (y!= z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- EXECUTION TIME:
0.217787
-- ERROR:
  File "/home/codebench/codes/1679/1099/main.py", line 6
    if (x <= 0 or y <= 0 or z = 0):
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:15:13) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z = 0):
	print("Entradas: ", x",",y,",",z)
	print("Tipo de triangulo: ","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- ERROR:
File "XXXX", line 6
    if (x <= 0 or y <= 0 or z = 0):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:15:14) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z = 0):
	print("Entradas: ", x",",y,",",z)
	print("Tipo de triangulo: ","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- EXECUTION TIME:
0.135309
-- ERROR:
  File "/home/codebench/codes/1679/1099/main.py", line 6
    if (x <= 0 or y <= 0 or z = 0):
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:16:49) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas: ", x",",y,",",z)
	print("Tipo de triangulo: ","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- ERROR:
File "XXXX", line 7
    print("Entradas: ", x",",y,",",z)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:17:49) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 17:18:14) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 17:18:16) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- EXECUTION TIME:
0.189558
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 , 5.5
Tipo de triangulo:  escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:40:40) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x == y) and (y == z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:41:02) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:41:26) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x==y) and (y==z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- EXECUTION TIME:
0.201235
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 , 5.5
Tipo de triangulo:  escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:41:50) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x == y) and (y == z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:41:59) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x == y) and (y == z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- EXECUTION TIME:
0.155065
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 , 5.5
Tipo de triangulo:  escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas:  1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:42:09) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x == y) and (y == z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:42:21) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x == y) and (y == z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:42:23) 
-- CODE:
# Entradas ao lados
x = float(input("valor de x: "))
y = float(input("valor de y: "))
z = float(input("valor de z: "))

if (x <= 0 or y <= 0 or z <= 0):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x >= y + z) or (y >= x + z) or (z>= x + y)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","invalido")
elif((x == y) and (y == z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo:","equilatero")
elif((x == y) or (y == z) or (z == x)):
	print("Entradas:",x,",",y,",",z)
	print("Tipo de triangulo:","isosceles")
elif((x != y) and (x != z) and (y != z)):
	print("Entradas: ",x,",",y,",",z)
	print("Tipo de triangulo: ","escaleno")
-- EXECUTION TIME:
0.17095
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas:  3.3 , 4.4 , 5.5
Tipo de triangulo:  escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
